--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ github_username:  notsosecure
 markdown: kramdown
 future: true
 
-credit-name1: Akshay Sudan
-credit-link1: https://twitter.com/akshay_asc11
+# credit-name1: Akshay Sudan
+# credit-link1: https://twitter.com/akshay_asc11
 
-credit-name2: Dharmendra Gupta
-credit-link2: https://twitter.com/ItsDg4u
+# credit-name2: Dharmendra Gupta
+# credit-link2: https://twitter.com/ItsDg4u
 
-credit-name3: Savan Gadhiya
-credit-link3: https://twitter.com/gadhiyasavan
+# credit-name3: Savan Gadhiya
+# credit-link3: https://twitter.com/gadhiyasavan
