--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Browser Security Enhancements
+title: Browser Security Enhancements Tracker
 companytitle: NotSoSecure
 email: info@notsosecure.com
 description: > # this means to ignore newlines until "baseurl:"
