--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: info@notsosecure.com
 description: > # this means to ignore newlines until "baseurl:"
   The browsers are currently implementing lots of changes day by day. We will be listing changes relevant to security enhancements which known browsers have implemented recently. Such security updates are aimed to be updated on regular intervals.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+#url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
 companyurl: "https://www.notsosecure.com"
 twitter_username: notsosecure
 github_username:  notsosecure
